samples/_failures_safe/1761321155_accfce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ceebfe0.c: In function ‘main’:
./samples/SAFE/__tmp_9ceebfe0.c:155:13: error: expected expression at end of input
  155 |             if (scanf("%d", &
      |             ^~
./samples/SAFE/__tmp_9ceebfe0.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ceebfe0.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ceebfe0.c:155:13: error: expected declaration or statement at end of input
